cleaning up code/ fixing huge gap between add and reviews list

--- a/client/src/components/recipe/RecipeReviews.module.scss
+++ b/client/src/components/recipe/RecipeReviews.module.scss
@@ -3,8 +3,6 @@
   padding-left: 20rem;
   padding-right: 20rem;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   background-color: rgb(233, 233, 233);
 
   margin-bottom: 10rem;
@@ -108,6 +106,7 @@
   &__list {
     display: flex;
     flex-direction: column;
+
 
     &__title {
       position: relative;
@@ -248,7 +247,7 @@
         resize: none;
 
         @media only screen and (max-width: 1000px) {
-          width: 90vw;
+          width: 80vw;
         }
       }
     }
@@ -266,7 +265,7 @@
       transition: all .2s;
 
       @media only screen and (max-width: 1000px) {
-        width: 90vw;
+        width: 80vw;
       }
 
       &:hover {
